stash raw usgs data

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@ data/mcmc/fe_nolulc
 data/mcmc/backup_yearround/
 data/mcmc/old
 reilly_2.R
+manuscript/Stachelek_etal_submitted_01.pdf
+data/usgs/usgs_nutrient_inputs.xlsx
