prep reviewer comment pdf

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,5 @@ reilly_2.R
 manuscript/Stachelek_etal_submitted_01.pdf
 data/usgs/usgs_nutrient_inputs.xlsx
 *.docx
+manuscript/reviewer_comments.md
+manuscript/reviewer_comments.pdf
