test ref and figure linking

--- a/manuscript/Makefile
+++ b/manuscript/Makefile
@@ -1,3 +1,5 @@
-manuscript.pdf: manuscript.Rmd
+manuscript.pdf: manuscript.Rmd \
+pinp.cls \
+lagosag.bib
 	Rscript -e "rmarkdown::render('manuscript.Rmd')"
 	
