all figures, tables added, bib cites added through intro

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,6 @@ manuscript/manuscript.log
 manuscript/manuscript.tex
 manuscript/manuscript_cache/
 manuscript/manuscript_files/
+manuscript/old
+manuscript/jss.bst
+manuscript/test.tex
