--- a/manuscript/Makefile
+++ b/manuscript/Makefile
@@ -1,5 +1,6 @@
 manuscript.pdf: manuscript.Rmd \
 pinp.cls \
-lagosag.bib
+lagosag.bib \
+jsta.bst
 	Rscript -e "rmarkdown::render('manuscript.Rmd')"
 	
