working docker build copying mcmc data

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,3 +44,5 @@ RUN Rscript -e "LAGOSNE::lagosne_get('1.087.1', dest_folder = LAGOSNE:::lagos_pa
 RUN Rscript -e "install.packages(c('ggsn'), repos = 'https://cran.rstudio.com')"
 
 RUN cd beyond_land_use && git pull
+
+COPY data/mcmc/re_brms.rds /~/beyond_land_use/data/mcmc/
